# rizin-notebook

./: .gitignore  README.md  autocomplete_config.go  config.go  go.mod  go.sum  keybindings.go  main.go  nonce.go  notebook.go  notebook_search.go  output.go  pipe.go  pipe_unix.go  pipe_windows.go  scripting.go  search_config.go  server.go  server_about.go  server_api.go  server_assets.go  server_markdown.go  server_output.go  server_page.go  server_pipe.go  server_search.go  server_settings.go  store.go
.github/workflows/: build.yml  ci.yaml  ci.yml
assets/static/: autocomplete.js  notebook-search.js  shortcuts.js
assets/templates/: about.tmpl  console-error.tmpl  console.tmpl  error.tmpl  index.tmpl  markdown-edit.tmpl  markdown-view.tmpl  output.tmpl  page-new.tmpl  page-view.tmpl  reload.tmpl  script.tmpl  settings-edit.tmpl  settings.tmpl
cutter-notebook-plugin/: CMakeLists.txt  README.md
cutter-notebook-plugin/src/: CutterNotebookPlugin.cpp  CutterNotebookPlugin.h  NotebookDockWidget.cpp  NotebookDockWidget.h  NotebookSettingsDialog.cpp  NotebookSettingsDialog.h
pb/: notebook.pb.go
proto/: notebook.pb.go  notebook.proto
rizin-notebook-plugin/: CMakeLists.txt  README.md
rizin-notebook-plugin/src/: nb_http.c  nb_server.h  notebook.pb-c.c  notebook.pb-c.h  rz_notebook.c
rz-notebook/: CMakeLists.txt  README.md
rz-notebook/src/: nb_http.c  nb_http.h  nb_server.c  notebook.pb-c.c  notebook.pb-c.h  rz_notebook.c
scripts/: test-artifacts.ps1
